releases/rook-ceph/post-install/00-cluster/03-ingress-tls.yml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ceph-dashboard
  namespace: rook-ceph
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - ceph.thuault.com
    secretName: ceph-dashboard-tls
  rules:
  - host: ceph.thuault.com
    http:
      paths:
      - path: /
        backend:
          serviceName: rook-ceph-mgr-dashboard
          servicePort: 8443
